--- a/exe31-projeto/style.css
+++ b/exe31-projeto/style.css
@@ -27,5 +27,12 @@ section#telefone{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background-image: url('img/frame-iphone.png');
+    background: url('img/frame-iphone.png') no-repeat;
+}
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
