--- a/exe33/mq002/estilos/paisagem.css
+++ b/exe33/mq002/estilos/paisagem.css
@@ -4,4 +4,5 @@
 body{
     background: url('../img/cev-landscape.jpg');
     background-position: left bottom;
+    background-repeat: no-repeat;
 }
