--- a/exe33/mq002/estilos/paisagem.css
+++ b/exe33/mq002/estilos/paisagem.css
@@ -2,7 +2,6 @@
 
 /* Aparelho deitado (landscape) */
 body{
-    background: url('../img/cev-landscape.jpg');
+    background-image: url('../img/cev-landscape.jpg');
     background-position: left bottom;
-    background-repeat: no-repeat;
 }
