--- a/exe33/mq004/estilos/media-query.css
+++ b/exe33/mq004/estilos/media-query.css
@@ -1,3 +1,67 @@
 @charset "UTF-8";
+
 /* Versao todas as midias */
 
+/* Typical device breakpoints 
+celular: até 600px até 768
+tablet 768 até 992
+desktop: 992 ate 1200
+grandes acima de 1200px*/ 
+@media print {
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
+    body{
+        background-image: url('../img/back-print.jpg');
+    }
+    main{
+        width: 90vw;
+        border: 2px solid black;
+    }
+    main::after{
+        content: 'Feito por Thiago Costa';
+        text-decoration: overline;
+    }
+    main h1{
+        text-shadow: none;
+        color: black;
+    }
+    img#phone {display: none;}
+    img#tablet{display: none;}
+    img#print {display: block;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    body{
+        background-image: url('../img/back-tablet.jpg');
+    }
+    img#phone {display: none;}
+    img#tablet{display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    body{
+        background-image: url('../img/back-pc.jpg');
+    }
+    img#phone {display: none;}
+    img#tablet{display: none;}
+    img#print {display: none;}
+    img#pc {display: block;}
+    img#tv {display: none;}
+}
+@media screen and (min-width: 1200px){
+    body{
+        background-image: url('../img/back-tv.jpg');
+    }
+    main{
+        width: 700px;
+    }
+    img#phone {display: none;}
+    img#tablet{display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: block;}
+}
