--- a/exe33/mq005/style.css
+++ b/exe33/mq005/style.css
@@ -5,15 +5,27 @@
     margin: 0;
     box-sizing: border-box;
 }
-body, html{
+body,html{
     background-color: lightgray;
 }
 header{
-    background-color: gray;
+    background-color: rgb(126, 125, 125);
 }
 header > h1{
     padding: 10px;
     text-align: center;
+}
+i#burguer{
+    background-color: rgb(48, 48, 48);
+    display: block;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+}
+i#burguer:hover{
+    background-color: white;
+    color: black;
 }
 menu{
     display: block;
@@ -21,7 +33,7 @@ menu{
 menu > ul{
     list-style-type: none;
 }
-menu > ul > li > a {
+menu > ul > li > a{
     display: block;
     padding: 10px;
     text-decoration: none;
