--- a/exe34-projeto/estilos/style.css
+++ b/exe34-projeto/estilos/style.css
@@ -8,25 +8,38 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-body{
+body,html{
     width: 100vw;
     height: 100vh;
     background-image: linear-gradient(#5f2c82, #49a09d);
 }
 main{
-    height: 40vh;
-    width: 50vw;
-    background-color: white;
-    position: fixed;
-    display: flex;
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+}
+section#login{
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border-radius: 10px;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
 }
-div#imagem{
-    background: url('../img/building.jpg') center center;
-    width: 100vw;
-
+section#login > div#imagem{
+    display: block;
+    background: url('../img/building.jpg') no-repeat;
+    height: 200px;
+    background-position: left bottom;
+    background-size: cover;
+}
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
 }
