--- a/exe34-projeto/estilos/style.css
+++ b/exe34-projeto/estilos/style.css
@@ -13,7 +13,7 @@
 body,html{
     width: 100vw;
     height: 100vh;
-    background-image: linear-gradient(#5f2c82, #49a09d);
+    background: #5f2c82;
 }
 main{
     height: 100vh;
@@ -31,6 +31,7 @@ section#login{
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
+    transition: width .3s, height .3s;
 }
 section#login > div#imagem{
     display: block;
