--- a/exe34-projeto/estilos/style.css
+++ b/exe34-projeto/estilos/style.css
@@ -24,7 +24,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
     height: 515px;
@@ -32,6 +31,8 @@ section#login{
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
     transition: width .3s, height .3s;
+    transform: translate(-50%, -50%);
+    transition-timing-function: ease;
 }
 section#login > div#imagem{
     display: block;
@@ -53,14 +54,35 @@ div#formulario > p {
 }
 form > div.campo{
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 9px;
     margin: 5px 0px;
 }
 div.campo > label{
     display: none;
+}
+div.campo > i {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo > input{
+    background-color: #49cfcd;
+    font-size: 1em;
+    height: 100%;
+    width: calc(100% - 45px);
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-14px);
+}
+div.campo > input:focus-within{
+    background-color: white;
+    
 }
 form > input[type=submit]{
     display: block;
